--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,8 +11,8 @@ bind-key r source-file ~/.tmux.conf \; display-message "TMUX Configuration reloa
 # set -g mouse on
 
 # Bind more intuitive keys for creating Vertical and Horizontal panes
-bind -n C-\\ split-window -h 
-bind -n C-\- split-window -v
+bind-key \\ split-window -h 
+bind-key - split-window -v
 
 bind -n M-h select-pane -L
 bind -n M-l select-pane -R
