Update .tmux.conf shortcuts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 # Unbinding default prefix
 unbind-key C-b
-
+unbind-key M-l
+unbind-key M-j
+unbind-key M-k
+unbind-key M-h
 # Setting prefix to "Ctrl + t"
 set-option -g prefix C-t
 
@@ -12,12 +15,12 @@ bind-key r source-file ~/.tmux.conf \; display-message "TMUX Configuration reloa
 
 # Bind more intuitive keys for creating Vertical and Horizontal panes
 bind-key \\ split-window -h 
-bind-key - split-window -v
+bind-key \- split-window -v
 
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
+bind -n M-left select-pane -L
+bind -n M-right select-pane -R
+bind -n M-up select-pane -U
+bind -n M-down select-pane -D
 
 bind -n M-. next-window
 bind -n M-, previous-window
