Fixed .tmux.conf transparent bg for window status render

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ setw -g mode-keys vi
 # For the future think of another key, other than "[" for to initiate copy mode 
 
 # Setting theme variables
-set -g @STATUS_BG "#252529"
+set -g @STATUS_BG "default"
 set -g @WIN_INA_FG "#5f87af"
 set -g @WIN_INA_BG "#010101"
 set -g @WIN_ACT_FG "#00ff00"
@@ -53,8 +53,8 @@ set -g window-status-current-format "#(bash ~/tmux_theme/window-status-format.sh
 #'#[fg=#{@WIN_ACT_BG}]#[bg=#{@WIN_ACT_BG},fg=#{@WIN_ACT_FG}]#I>\
 #[fg=#{@WIN_ACT_FG},bold]#W#[bg=#{@STATUS_BG},fg=#{@WIN_ACT_BG}]' #Format for active window
 
-set -g window-status-format '#[fg=#5f87af,bg=#1e1e2e] #I)#W'
-set -g window-status-last-style 'fg=white,bg=black'
+set -g window-status-format '#[fg=#{@WIN_INA_FG},bg=#{@STATUS_BG}] #I)#W '
+set -g window-status-last-style 'fg=#{@WIN_INA_FG},bg=#{@STATUS_BG}'
 # Set the base-index to 1 rather than 0
 set -g base-index 1
 set-window-option -g pane-base-index 1
