.tmux.conf session name style

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,10 @@ set -g @WIN_INA_FG "#5f87af"
 set -g @WIN_INA_BG "#010101"
 set -g @WIN_ACT_FG "#00ff00"
 set -g @WIN_ACT_BG "#00005f"
+set -g @SESSION_BG "#010101"
+set -g @SESSION_FG "#00afff"
+
+
 
 # Status bar styles and formats
 set -g status-justify left
@@ -47,7 +51,7 @@ set -g status-style 'bg=#{@STATUS_BG}' # transparent
 # set -g @WIN_ACT_INDEX "#[fg=#{@WIN_ACT_BG}]#[bg=#{@WIN_ACT_BG},fg=#{@WIN_ACT_FG}]#I>"
 #run-shell 'tmux set -g @WIN_ACT_INDEX "#[fg=$(tmux show -gqv @WIN_ACT_BG)]#[bg=$(tmux show -gqv @WIN_ACT_BG),fg=$(tmux show -gqv @WIN_INA_FG)]#I>"'
 #run-shell 'tmux set -g @WIN_ACT_NAME "#[fg=$(tmux show -gqv @WIN_ACT_FG),bold]#W#[bg=$(tmux show -gqv @STATUS_BG),fg=$(tmux show -gqv @WIN_ACT_BG)]"'
-
+set -g status-left '#[fg=#{@SESSION_BG}]#[fg=#{@SESSION_FG},bg=#{@SESSION_BG}]#S#[fg=#{@SESSION_BG},bg=#{@STATUS_BG}]  ' 
 # TODO: Find how to multilayer iterpolate to separate 
 set -g window-status-current-format "#(bash ~/tmux_theme/window-status-format.sh #I #W)"
 #'#[fg=#{@WIN_ACT_BG}]#[bg=#{@WIN_ACT_BG},fg=#{@WIN_ACT_FG}]#I>\
