--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,11 @@ bind -n M-, previous-window
 # Set the copy-mode to vi
 setw -g mode-keys vi 
 
+# Bind vim visual keys
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 # For the future think of another key, other than "[" for to initiate copy mode 
 
 # Setting theme variables
